"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

To satisfy rpmlint and remove the error "E: no-packager-tag", add the packager
tag and define it to a sane default.
  crossfire-client.spec
Kevin Bulgrien 2008-11-28

To satisfy rpmlint and remove the error "E: non-standard-group X11/Games", all
package groups are changed from "X11/Games" to "Games/Adventure".  Choices
offered by rpmlint were "Games/Adventure", "Games/Arcade", "Games/Boards",
"Games/Cards", "Games/Other", "Games/Puzzles", "Games/Sports", and
"Games/Strategy"
  crossfire-client.spec
Kevin Bulgrien 2008-11-28

Update all client .desktop files so they do not trigger rpmlint messages like
".desktop file is not valid, check with desktop-file-validate":  Terminate
the Categories key/value with a semicolon; remove the deprecated Encoding key.
Unify the Comment for all three clients.  Add an appropriate GenericName key.
Add [en] localestrings for the Name, GenericName, and Comment keys to help
make it more obvious that translations may be placed in this file.  Put the
keys in order as listed in http://standards.freedesktop.org/desktop-entry-spec
These changes are tested with desktop-file-validate.
 x11/crossfire-client.desktop
 gtk/crossfire-client.desktop
 gtk-v2/crossfire-client.desktop
Kevin Bulgrien 2008-11-28

Eliminate rpmlint message W: mixed-use-of-spaces-and-tabs (spaces: line 159,
tab: line 169) by converting tabs to spaces.  No functional change.
  crossfire-client.spec
Kevin Bulgrien 2008-11-28

Remove remaining vestiges of the old gcfclient/gcfclient2 naming convention.
This does also slightly change the default gdefaults2 file generated by the
client, and removes a blank line from the help output of the gtk-v2 client.
  INSTALL
  gtk-v2/src/config.c
  gtk-v2/src/main.c
Kevin Bulgrien 2008-11-26

Win32 updates.
 common/commands.c: variables declaration at top
 gtk/sound.c: empty stubs
 gtk/win32/config.h: vsnprintf exists under another name