@@ -2,6 +2,18 @@
 Top of SVN tree:
 ------------------------------------------------------------------------------
 
+Pending fix for [ 1876788 ] Doubled characters in GTK clients (unusable).
+mwedel noted gtk_signal_emit_stop_by_name() was not used consistently
+everywhere keypresses were consumed by the client.  Patches were written
+and tested to show that consistent use of gtk_signal_emit_stop_by_name()
+caused the doubled character problem to disappear.  Then a new patch was
+written to replace redundant call/return pairs with fall-through logic.
+http://www.gtk.org/api/2.6/gtk/gtk-Signals.html#gtk-signal-emit-stop-by-name
+also states this is a deprecated function, g_signal_stop_emission_by_name()
+is now used instead of gtk_signal_emit_stop_by_name().
+  gtk-v2/src/keys.c
+Kevin Bulgrien 2008-12-04
+
 To satisfy rpmlint and remove the error "E: no-packager-tag", add the packager
 tag and define it to a sane default.
   crossfire-client.spec
